--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
+    "lightbox2": "^2.11.4",
+    "lightgallery": "^2.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.62.1",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
